# ros_virtual_joystick

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE  README.md  colcon-defaults.yaml  docker-compose.yaml  plugin_rqt.xml  plugin_rviz.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci-pipeline.yaml
docker/: Dockerfile
docker/assets/: entrypoint.sh
include/ros_virtual_joystick/: publisher.hpp  rqt_plugin.hpp  rviz_plugin.hpp  widget.hpp
launch/: joystick_node.launch.py
ros_virtual_joystick/: CMakeLists.txt  package.xml  plugin_rviz.xml
ros_virtual_joystick/include/ros_virtual_joystick/: button_group_widget.hpp  joystick_graphics_view_widget.hpp  joystick_widget.hpp  rqt_plugin.hpp  types.hpp  widget.hpp
ros_virtual_joystick/src/: button_group_widget.cpp  joystick_graphics_view_widget.cpp  joystick_widget.cpp  publisher.cpp  rqt_plugin.cpp  utils.cpp  utils.hpp  widget.cpp  widget_impl.hpp
ros_virtual_joystick/test/: CMakeLists.txt  test_button_group_widget.cpp  test_joystick_graphics_view_widget.cpp  test_utils.cpp
scripts/: ci-pipeline.sh  test-rqt-plugin.sh
src/: README.md  joystick_graphics_view_widget.cpp  joystick_widget.hpp  node.cpp  publisher.cpp  publisher.hpp  rqt_plugin.cpp  rviz_plugin.cpp  utils.hpp  widget.cpp  widget_impl.cpp  widget_impl.hpp
src/plugins/: rqt_plugin.cpp  rqt_plugin.hpp  rviz_plugin.cpp  rviz_plugin.hpp
src/widgets/: button_group_widget.cpp  button_group_widget.hpp  joystick_graphics_view_widget.cpp  joystick_graphics_view_widget.hpp  joystick_widget.cpp  joystick_widget.hpp  topic_widget.cpp  topic_widget.hpp  widget_impl.cpp  widget_impl.hpp
test/: CMakeLists.txt  test_button_group_widget.cpp  test_joystick_graphics_view_widget.cpp  test_topic_widget.cpp
