<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_virtual_joystick</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robin@todo.com">Robin Read</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rviz_common</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin_rqt.xml"/>
  </export>
</package>
